--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									</div>
 								</div>
 								<div>
-									<button type="submit" class="btn btn-primary btn-block">
+									<button type="submit" class="btn btn-primary btn-block" id="btnLogin">
 										<i class="fa fa-sign-in"></i> Logar
 									</button>
 								</div>
@@ -53,6 +53,40 @@
 					</div>
 				</div>
 				<div class="col-3"></div>
+			</div>
+		</div>
+		<!-- modal -->
+		<!-- Modal -->
+		<div class="modal fade" id="changePassword" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header bg-info">
+				<h5 class="modal-title text-white">Trocar a senha</h5>
+				<button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="col-1"></div>
+						<div class="col-10">
+							<div class="form-group">
+								<label for="password">Nova senha:</label>
+								<input type="text" id="password" class="form-control" name="senha" placeholder="Digite uma nova senha"> 
+							</div>
+							<div class="form-group">
+								<label for="passConfirm">Confirme a senha:</label>
+								<input type="text" id="passConfirm" class="form-control" name="senha" placeholder="Digite uma nova senha"> 
+							</div>
+						</div>
+						<div class="col-1"></div>
+					</div>
+				</div>
+				<div class="modal-footer">
+				<button type="button" class="btn btn-outline-dark" data-dismiss="modal">Fechar</button>
+				<button type="button" class="btn btn-info">Salvar</button>
+				</div>
+			</div>
 			</div>
 		</div>
     </body>
