--- a/cadastrar.html
+++ b/cadastrar.html
@@ -9,57 +9,59 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="css/cadastrar.css">
   </head>
   <body>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-2">
-                </div>
-                <div class="col-8">
-                    <br><br><br><br>
-                    <div class="card">
-                        <div class="card-header bg-primary">
-                            <h3 class="card-title text-center text-white">Cadastro</h3>
-                        </div>
-                        <form id="formCadastro" method="POST" action="jsp/cadastrar.jsp">
-                            <div class="card-body">
-                                <div class="form-group">
-                                    <label for="nome">Nome:</label>
-                                    <input type="text" class="form-control" name="nome" id="nome" placeholder="Digite seu nome" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email:</label>
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Digite seu e-mail" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Senha</label>
-                                    <input type="password" min="4" max="8" class="form-control" name="senha" id="password" placeholder="Digite sua senha" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="confirmPassword">Confirme sua senha:</label>
-                                    <input type="password" min="4" max="8" class="form-control" name="senhaConfirme" id="confirmPassword" placeholder="Digite novamente sua senha" required>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <button type="submit" class="btn btn-primary">Enviar</button>
-                            </div>
-                        </form>
+    <section class="pt-5 pb-5 mt-0 align-items-center d-flex bg-dark" style="min-height: 100vh; 
+    background-size: cover; 
+    background-image: url(https://images.unsplash.com/photo-1477346611705-65d1883cee1e?ixlib=rb-0.3.5&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1920&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjMyMDc0fQ&amp;s=c0d43804e2c7c93143fe8ff65398c8e9);">
+        <div class="container-fluid">
+          <div class="row  justify-content-center align-items-center d-flex-row text-center h-100">
+            <div class="col-12 col-md-4 col-lg-3   h-50 ">
+              <div class="card shadow">
+                <div class="card-body mx-auto">
+                  <h4 class="card-title mt-3 text-center">Cadastre-se</h4>
+                  <form id="formCadastro" method="POST" action="jsp/cadastrar.jsp">
+                    <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-user"></i> </span>
+                      </div>
+                      <input type="text" class="form-control" name="usuario" id="usuario" placeholder="Usuario" required>
                     </div>
+                    <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
+                      </div>
+                      <input type="email" class="form-control" name="email" id="email" placeholder="Digite seu e-mail" required>
+                    </div>
+                    <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-key"></i> </span>
+                      </div>
+                      <input type="password" min="4" max="8" class="form-control" name="senha" id="password" placeholder="Senha" required>
+                    </div>
+                    <div class="form-group input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-key"></i> </span>
+                      </div>
+                      <input type="password" min="4" max="8" class="form-control" name="senhaConfirme" id="confirmPassword" placeholder="Confirme a senha" required>
+                    </div>
+                    <div class="form-group">
+                      <button type="submit" class="btn btn-success btn-block"> 
+                        <i class="fa fa-check-circle"></i> Cadastrar
+                      </button>
+                    </div>
+                    <p class="text-center">Já possui conta?
+                      <a href="login.html">Login</a>
+                    </p>
+                  </form>
                 </div>
-				<div class="col-2"></div>
-			</div>
-            <div class="row">
-                <div class="col-1"></div>
-                <div class="col-8 pull-left">
-                    <br><br><br>
-                    <a class="btn btn-danger pull-left" href="index.html"> <!-- cadastrar.html -->
-                        <i class="fa fa-arrow-circle-left"></i> Voltar
-                    </a>
-                </div>
+              </div>
             </div>
-		</div>
-    </body>
+          </div>
+        </div>
+      </section>
+  </body>
   <footer>
 		<!-- jQuery and Bootstrap Bundle (includes Popper) -->
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -68,3 +70,4 @@
 		<script src="js/cadastrar.js"></script>
   </footer>
 </html>
+
